Estiliza botão entrar e texto cadastre-se

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,3 +33,49 @@ body{
 .form-image img{
     width: 31rem;
 }
+
+.form{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #ffffff;
+    padding: 3rem;
+}
+.form-header{
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.login-button{
+    display: flex;
+    align-items: center;
+}
+.login-button button{
+    border: none;
+    background-color: #6c63ff;
+    padding: 0.4rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+
+}
+.login-button button:hover{
+    background-color: #6b63fff1;
+}
+.login-button button a{
+    text-decoration: none;
+    font-weight: 500;
+    color: #ffffff;
+}
+.form-header h1::after{
+    content: "";
+    display: block;
+    width: 5rem;
+    height: 0.3rem;
+    background-color: #6c63ff;
+    margin: 0 auto;
+    position: absolute;
+    border-radius: 10px;
+}
