--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ body{
 }
 
 .gender-group{
-    display: flexbox;
+    display: flex;
     justify-content: space-between;
     margin-top: 0.65rem;
     padding: 0 0.5rem;
@@ -137,4 +137,26 @@ body{
     font-size: 0.81rem;
     font-weight: 600;
     color: #000000c0;
+}
+
+
+.continue-button button {
+    width: 100%;
+    margin-top: 2.5rem;
+    border: none;
+    background-color: #6c63ff;
+    padding: 0.62rem;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.continue-button button:hover {
+    background-color: #6b63fff1;
+}
+
+.continue-button button a {
+    text-decoration: none;
+    font-size: 0.93rem;
+    font-weight: 500;
+    color: #fff;
 }
